all contorols again alignment fixes

--- a/webview-ui/src/global.css
+++ b/webview-ui/src/global.css
@@ -4,7 +4,7 @@
 
 :root {
 --main-bg-color: rgb(75, 88, 78);
---project-manager-grid-label-column-size : 8rem;
+--project-manager-grid-label-column-size : 9rem;
 --project-manager-grid-value-column-size : 15rem;
 
 --global-box-height : 40px;
